src/client/panes/unit/snapshots/zellij__client__panes__grid__grid_tests__vttest2_7.snap
---
source: src/client/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (W): Push <RETURN>
01 (W): Soft scroll down region [1..24] size 24 Line 29
02 (W): Soft scroll down region [1..24] size 24 Line 28
03 (W): Soft scroll down region [1..24] size 24 Line 27
04 (W): Soft scroll down region [1..24] size 24 Line 26
05 (W): Soft scroll down region [1..24] size 24 Line 25
06 (W): Soft scroll down region [1..24] size 24 Line 24
07 (W): Soft scroll down region [1..24] size 24 Line 23
08 (W): Soft scroll down region [1..24] size 24 Line 22
09 (W): Soft scroll down region [1..24] size 24 Line 21
10 (W): Soft scroll down region [1..24] size 24 Line 20
11 (W): Soft scroll down region [1..24] size 24 Line 19
12 (W): Soft scroll down region [1..24] size 24 Line 18
13 (W): Soft scroll down region [1..24] size 24 Line 17
14 (W): Soft scroll down region [1..24] size 24 Line 16
15 (W): Soft scroll down region [1..24] size 24 Line 15
16 (W): Soft scroll down region [1..24] size 24 Line 14
17 (W): Soft scroll down region [1..24] size 24 Line 13
18 (W): Soft scroll down region [1..24] size 24 Line 12
19 (W): Soft scroll down region [1..24] size 24 Line 11
20 (W): Soft scroll down region [1..24] size 24 Line 10
21 (W): Soft scroll down region [1..24] size 24 Line 9
22 (W): Soft scroll down region [1..24] size 24 Line 8
23 (W): Soft scroll down region [1..24] size 24 Line 7
24 (C):                                                                                                               
25 (C):                                                                                                               
26 (C):                                                                                                               
27 (C):                                                                                                               
28 (C):                                                                                                               
29 (C):                                                                                                               
30 (C):                                                                                                               
31 (C):                                                                                                               
32 (C):                                                                                                               
33 (C):                                                                                                               
34 (C):                                                                                                               
35 (C):                                                                                                               
36 (C):                                                                                                               
37 (C):                                                                                                               
38 (C):                                                                                                               
39 (C):                                                                                                               
40 (C):                                                                                                               

