src/client/panes/unit/snapshots/zellij__client__panes__grid__grid_tests__vttest2_8.snap
---
source: src/client/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (W):                                                                                                               
01 (W):                                                                                                               
02 (W):                                                                                                               
03 (W):                                                                                                               
04 (W):                                                                                                               
05 (W):                                                                                                               
06 (W):                                                                                                               
07 (W):                                                                                                               
08 (W):                                                                                                               
09 (W):                                                                                                               
10 (W):                                                                                                               
11 (W): Push <RETURN>
12 (W): Jump scroll down region [12..13] size 2 Line 29
13 (W):                                                                                                               
14 (W):                                                                                                               
15 (W):                                                                                                               
16 (W):                                                                                                               
17 (W):                                                                                                               
18 (W):                                                                                                               
19 (W):                                                                                                               
20 (W):                                                                                                               
21 (W):                                                                                                               
22 (W):                                                                                                               
23 (W):                                                                                                               

