src/client/panes/unit/snapshots/zellij__client__panes__grid__grid_tests__vttest8_5.snap
---
source: src/client/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): If your terminal has the ANSI 'Insert Character' function                                        
01 (C): (the VT102 does not), then you should see a line like this                                       
02 (C):   A B C D E F G H I J K L M N O P Q R S T U V W X Y Z                                            
03 (C): below:                                                                                           
04 (C):                                                                                                  
05 (C):   A B C D E F G H I J K L M N O P Q R S T U V W X Y Z                                            
06 (C):                                                                                                  
07 (C):                                                                                                  
08 (C):                                                                                                  
09 (C): Push <RETURN>                                                                                    
10 (C):                                                                                                  
11 (C):                                                                                                  
12 (C):                                                                                                  
13 (C):                                                                                                  
14 (C):                                                                                                  
15 (C):                                                                                                  
16 (C):                                                                                                  
17 (C):                                                                                                  
18 (C):                                                                                                  
19 (C):                                                                                                  
20 (C):                                                                                                  
21 (C):                                                                                                  
22 (C):                                                                                                  
23 (C):                                                                                                  

